--- a/result-app-service.yml
+++ b/result-app-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: result-service
   labels:
     name: result-service
-    app: demo-result-app
+    app: demo-voting-app
 spec:
   type: LoadBalancer
   ports:
